--- a/index.html
+++ b/index.html
@@ -16,5 +16,27 @@
             <button class="btn-contact">Contact Us</button>
         </div>
     </header>
+    <main>
+        <section class="my-failure">
+            <div class="my-failue-container">
+                <div class="person">
+                    <img src="images/person.png" alt="A confused person here">
+                </div>
+                <div class="failure">
+                    <h3 class="failure-title">My failures of <br> previous year</h3>
+                    <p class="failure-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                        has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                        Richard McClintock.</p>
+                    <ul class="lists">
+                        <li class="list">Contrary to popular belief, is not simply.</li>
+                        <li class="list">Contrary to popular belief.</li>
+                        <li class="list">Contrary to popular , is not simply.</li>
+                        <li class="list">Contrary to popular belief, is not simply.</li>
+                        <li class="list">Contrary to popular simply.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
