--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="my-failure">
             <div class="my-failue-container">
                 <div class="person">
-                    <img src="images/person.png" alt="A confused person here">
+                    <img src="./images/person.png" alt="A confused person here">
                 </div>
                 <div class="failure">
                     <h3 class="failure-title">My failures of <br> previous year</h3>
@@ -34,6 +34,24 @@
                         <li class="list">Contrary to popular belief, is not simply.</li>
                         <li class="list">Contrary to popular simply.</li>
                     </ul>
+                </div>
+            </div>
+        </section>
+        <section class="extra-container">
+            <div class="extra">
+                <div>
+                    <h3 class="extra-title">How to become a cricketer?</h3>
+                    <p class="failure-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga nisi ipsa laudantium. Ea, ad eos voluptas saepe officia amet magni?</p>
+                    <ul class="lists">
+                        <li class="list">Standing Sideways. Always stand facing the bowler with your feet shoulder-width apart. ...</li>
+                        <li class="list">Hold the bat. ...</li>
+                        <li class="list">Distance between bat and stump. ...</li>
+                        <li class="list">Tap the bat on the ground line. ...</li>
+                        <li class="list">Swing Backward Momentum. ...</li>
+                    </ul>
+                </div>
+                <div class="singer">
+                    <img class="cricket-img" src="./images/cricket.jpg">
                 </div>
             </div>
         </section>
