--- a/index.html
+++ b/index.html
@@ -55,6 +55,32 @@
                 </div>
             </div>
         </section>
+        <section class="my-plans">
+            <h3 class="my-plans-title">My Plans</h3>
+            <div class="my-plans-container">
+                <div class="my-plans1">
+                    <img class="my-plans1-img" src="images/icons/web.png" alt="">
+                    <h4 class="my-plans1-title">Web Development</h4>
+                    <p class="my-plans1-description">I want to start</p>
+                </div>
+                <div class="my-plans2">
+                    <img class="my-plans2-img" src="images/icons/js.png" alt="">
+                    <h4 class="my-plans2-title">Javascript</h4>
+                    <p class="my-plans2-description">I want to learn</p>
+                </div>
+                    <div class="my-plans3">
+                        <img class="my-plans3-img" src="images/icons/smoke.png" alt="">
+                        <h4 class="my-plans3-title">Smoking Habit</h4>
+                        <p class="my-plans3-description">I want to end</p>
+                    </div>
+                    <div class="my-plans4">
+                        <img class="my-plans4-img" src="images/icons/ecom.png" alt="">
+                        <h4 class="my-plans4-title">Web Development</h4>
+                        <p class="my-plans4-description">I want to develop</p>
+                    </div>
+                </div>
+            </div>
+            </section>
     </main>
 </body>
 </html>
