--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
                 </div>
             </div>
             </section>
+            <section class="positive-mindset-container">
+                <div class="positive-mindset">
+                    <h3 class="positive-mindset-title">Awlays keep a positive <br> mindset</h3>
+                    <button class="positive-mindset-button">Call Now</button>
+                </div>
+            </section>
     </main>
 </body>
 </html>
