--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
             <h3 class="my-plans-title">My Plans</h3>
             <div class="my-plans-container">
                 <div class="my-plans1">
-                    <img class="my-plans1-img" src="images/icons/web.png" alt="">
+                    <img class="my-plans1-img" src="./images/icons/web.png" alt="">
                     <h4 class="my-plans1-title">Web Development</h4>
                     <p class="my-plans1-description">I want to start</p>
                 </div>
                 <div class="my-plans2">
-                    <img class="my-plans2-img" src="images/icons/js.png" alt="">
+                    <img class="my-plans2-img" src="./images/icons/js.png" alt="">
                     <h4 class="my-plans2-title">Javascript</h4>
                     <p class="my-plans2-description">I want to learn</p>
                 </div>
                     <div class="my-plans3">
-                        <img class="my-plans3-img" src="images/icons/smoke.png" alt="">
+                        <img class="my-plans3-img" src="./images/icons/smoke.png" alt="">
                         <h4 class="my-plans3-title">Smoking Habit</h4>
                         <p class="my-plans3-description">I want to end</p>
                     </div>
                     <div class="my-plans4">
-                        <img class="my-plans4-img" src="images/icons/ecom.png" alt="">
+                        <img class="my-plans4-img" src="./images/icons/ecom.png" alt="">
                         <h4 class="my-plans4-title">Web Development</h4>
                         <p class="my-plans4-description">I want to develop</p>
                     </div>
@@ -87,6 +87,27 @@
                     <button class="positive-mindset-button">Call Now</button>
                 </div>
             </section>
+            <footer>
+                <div class="footer-container">
+                    <div class="footer-container-child">
+                        <h3 class="footer-main-title">Future</h3>
+                        <p class="footer-description">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                        <p class="footer-email">Email : sabbir9011@gmail.com</p>
+                        <p class="footer-phone">Phone : 01500 00 00 00</p>
+                        <img class="facebook" src="./images/icons/fb.png" alt="">
+                        <img class="twitter" src="./images/icons/twitter.png" alt="">
+                        <img class="youtube" src="./images/icons/youtube.png" alt="">
+                    </div>
+                    <div class="footer-container-child">
+                        <h3 class="footer-sub-title">Subscribe</h3>
+                        <div class="email-container">
+                            <input type="email" placeholder="Enter Your Email">
+                        </div>
+                        <button class="btn-subscribe">Subscribe</button>
+                    </div>
+                </div>
+            </footer>
     </main>
 </body>
 </html>
